@@ -94,6 +94,8 @@ Bug fixes
  * ``wagtail.contrib.sitemaps`` no longer depends on SiteMiddleware (Matt Westcott)
  * Purge image renditions cache when renditions are deleted (Pascal Widdershoven, Matt Westcott)
  * Image / document forms now display non-field errors such as ``unique_together`` constraints (Matt Westcott)
+ * Make "Site" chooser in site settings translateable (Andreas Bernacca)
+ * Add missing dropdown icons to image upload, document upload, and site settings screens (Andreas Bernacca)
 
 
 Upgrade considerations
